fixed long links overflow

--- a/assets/static/main.css
+++ b/assets/static/main.css
@@ -71,6 +71,7 @@ a {
     color: #48a5ab;
     text-decoration: none;
     outline: none;
+	overflow-wrap: break-word;
 }
 
 .wrapper {
